2005/03/02 Matt Zimmerman <zubov@users.sourceforge.net>
* Hell has frozen over, Dark finally submitted his .diz patch
* We finally bent, nice work Dark!

2005/03/01 Jamal James <teflon114@gmail.com>
* Fixed !speed ... i hope
* Fixed Trails plugin and !passed to work with the new SiteBot
* Moved all net.drmods.plugins.* configuration from .properties files to drmods.conf
* Added !new irc plugin

2005/02/27 Jamal James <teflon114@gmail.com>
* All sitebot plugins converted to work with the new implementation
  It compiles ... w00h00
* All bugs with !rank should be fixed now. I redid the entire thing from scratch
* Added !find irc plugin ... thx [SMAN]


2005/02/27 Matt Zimmerman <zubov@users.sourceforge.net>
* New internal SiteBot interface, if you're not a developer, don't bother

2005/02/26 Jamal James <teflon114@gmail.com>
* Applied creditloss fix. Thx TDSoul
  See http://www.drftpd.org/phpBB2/viewtopic.php?t=142&p=789#789

2005/02/26 Morgan Christiansson <drftpd@mog.se>
* Critical bug in ID3 gave errors on CWD into directories containing
  MP3 files that have genre ID's that aren't in the ID3GenreList.java
  genre array. The CWD still succeeded even though returning error.
  This prevented me from downloading my drum'n'bass tunes. :'(

2005/02/25 Jamal James <teflon114@gmail.com>
* Applied diff for more zipscript options. Thx TDSoul
  See http://www.drftpd.org/phpBB2/viewtopic.php?t=170
* Added AutoFreeSpace plugin. Thx P
  See http://www.drftpd.org/phpBB2/viewtopic.php?t=57
* Fixed !{al,wk,month,day}{up,dn} irc plugin to output using blowfish

2005/02/23 Jamal James <teflon114@gmail.com>
* Fixed OnConnect
* Possible fix for multiple HALFWAY and COMPLETE SiteBot announcements.

2005/02/21 Jamal James <teflon114@gmail.com>
* Added code to deny MKD of a dir thats already nuked
* Added 2 setings to zipscript.conf
  #only allow files found in the sfv file [true/false]
  sfv.restrict.files=true
  #allow multiple sfv files in one dir [true/false]
  allow.multi.sfv=false